# tik-tok-clone-rust

auth-nz-service/: Cargo.toml  README.md
auth-nz-service/src/application/: mod.rs
auth-nz-service/src/application/dto/: auth_dto.rs  mod.rs
auth-nz-service/src/application/use_cases/: login.rs  logout.rs  mod.rs  register.rs
auth-nz-service/src/domain/: errors.rs
auth-nz-service/src/domain/entities/: mod.rs  permission.rs  role.rs  session.rs  user.rs
auth-nz-service/src/domain/repositories/: mod.rs  permission_repository.rs  role_repository.rs  session_repository.rs  user_repository.rs
auth-nz-service/src/domain/services/: auth_service.rs
auth-nz-service/src/domain/value_objects/: mod.rs  password_hash.rs  permission_id.rs  permission_name.rs  role_id.rs  role_name.rs  session_id.rs  token.rs  user_id.rs
auth-nz-service/src/infrastructure/: config.rs
auth-nz-service/src/infrastructure/persistence/: postgres.rs
auth-nz-service/src/infrastructure/repositories/: mod.rs
auth-nz-service/src/presentation/: handlers.rs  mod.rs  routes.rs  server.rs
material-workers/: Cargo.toml
material-workers/src/: main.rs
material-workers/src/application/: mod.rs  workers.rs
material-workers/src/application/processors/: material_job_processor.rs  mod.rs
material-workers/src/domain/: errors.rs
material-workers/src/domain/entities/: material.rs  material_job.rs  mod.rs
material-workers/src/domain/repositories/: job_repository.rs  material_repository.rs  mod.rs
material-workers/src/domain/services/: material_processor.rs  mod.rs
material-workers/src/domain/value_objects/: job_id.rs  material_code.rs  material_id.rs  material_name.rs  mod.rs  unit.rs
user-service/: API_TESTING.md  Cargo.toml  FIXES_NEEDED.md  README.md  RUN.md
user-service/proto/: user.proto
user-service/src/: main.rs
user-service/src/application/: errors.rs  mod.rs
user-service/src/application/configs/: configs.rs  configs.yaml  mod.rs
user-service/src/application/dto/: mod.rs  user_dto.rs
user-service/src/application/use_cases/: mod.rs
user-service/src/di/: README.md  mod.rs
user-service/src/domain/: errors.rs  mod.rs
user-service/src/domain/base/: mod.rs
user-service/src/domain/credentials/: mod.rs
user-service/src/domain/entities/: mod.rs
user-service/src/domain/passwords/: mod.rs
user-service/src/domain/profiles/: mod.rs
user-service/src/domain/repositories/: mod.rs
user-service/src/domain/services/: mod.rs
user-service/src/domain/value_objects/: email.rs  mod.rs  status_id.rs  username.rs
user-service/src/infrastructure/: config.rs  mod.rs
user-service/src/infrastructure/persistence/: mod.rs  postgres.rs  redis_cache.rs
user-service/src/infrastructure/repositories/: mod.rs  profile_repository_impl.rs  (+1 more)
user-service/src/presentation/: handlers.rs  mod.rs  routes.rs  server.rs
(+133 files in other folders)
