[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Domain layer - no external dependencies ideally
# Application layer dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Infrastructure layer
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }
scylla = { version = "0.11" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Presentation layer
axum = { version = "0.8" }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = "7.0"
async-graphql-axum = { version = "7.0" }
async-graphql-derive = "7.0"

# Shared
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"

